# CMSSampleGen

./: CMakeLists.txt  README.md  condor_submit.sh  gen_batch_samples_condor.py  main.cc  plot_csv.py  run-template.mac  run-template_condor.mac  run.sh  run_condor.sh  run_local.sh  sampleGen.sub
debug_parquet_scripts/: compare_energy.py  count_samples_from_parquet.py  parquet_debug.py  plot_parquet.py  read_first_row.py
examples/: ._.ipynb_checkpoints  ._firstLayer.csv  ._secondLayer_1x.csv  ._secondLayer_2x.csv  ._secondLayer_4x.csv  ._thirdLayer.csv  secondLayer_1x.csv  secondLayer_2x.csv  secondLayer_4x.csv  thirdLayer.csv
include/: ._TrackingAction.hh  ._UserDefinedActionInitialization.hh  ._UserDefinedDetectorConstruction.hh  ._UserDefinedPrimaryGeneratorAction.hh  DetectorMessenger.hh  TrackingAction.hh  UserDefinedActionInitialization.hh  UserDefinedDetectorConstruction.hh  UserDefinedPrimaryGeneratorAction.hh
logs/: htcondor_output_0.out
macros/: ._.ipynb_checkpoints  ._init_beam.mac  ._init_scoreMeshes.mac  ._init_vis.mac  ._run-template.mac  ._run.mac  ._run.mac-cross-checks  ._run.mac-save  ._run_batch_template.mac  init_beam.mac  init_scoreMeshes.mac  init_vis.mac  run-template.mac  run.mac  run.mac-cross-checks  run.mac-save
output_parquet_files/: simulation_results_0.parquet
outputs/: allLayers.csv  firstLayer.csv  secondLayer.csv  thirdLayer.csv
scripts/: Mono_Energy.sh  New_Plot.py  collect_csv_into_npy.py  condor_job.sh  plot_depth_curves.py  plot_edep_slices.py  removeWindowsLineEndings.sh
src/: DetectorMessenger.cc  MagneticField.hh  (+5 more)
(+50 files in other folders)
